# restaurant_menu

./: .env-dev  .env_test  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-tests.yml  docker-compose.yml  init_db.sh  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  start_reload.sh
.github/workflows/: tests.yml
admin/: Menu.xlsx
alembic/: env.py
alembic/versions/: 6f723ad59539_init.py  9865376956ed_init.py  b956dc3710cc_init.py
core/: constants.py  db.py  main.py  settings.py
core/docs/: project_description.py
core/endpoints/: all_in_one.py  api.py  dishes.py  menus.py  submenus.py
core/models/: __init__.py  base.py  models.py
core/repositories/: __init__.py  base.py  dishes.py  menus.py  submenus.py
core/schemas/: __init__.py  all_in_one.py  base.py  dishes.py  menus.py  submenus.py
core/services/: __init__.py  admin_xls.py  base.py  dishes.py  menus.py  redis.py  submenus.py
docs/: tasks.md
tests/: base.py  conftest.py  test_all_in_one.py  test_api_flow.py  test_dishes.py  test_menus.py  test_submenus.py
tests/utils/: __init__.py  api.py  crud.py  ede.xlsx  init_data.py  reverse.py  uuid_tool.py
workers/: __init__.py  celery.py
