[tool.poetry]
name = "ylab Dishes menu"
version = "0.0.1"
description = ""
authors = ["Alexei Fisher <fisheriusby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
pydantic = "^2.0.3"
psycopg2-binary = "^2.9.6"
pydantic-settings = "^2.0.2"
alembic = "^1.11.1"
sqlalchemy = "1.4.49"
asyncpg = "^0.28.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
pytest-order = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
flake8-bugbear = "^23.7.10"
flake8-builtins = "^2.1.0"
flake8-import-order = "^0.18.2"
flake8-simplify = "^0.20.0"
pep8-naming = "^0.13.3"


[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip_glob = ["*/alembic/versions/*"]

# doesn't work with pre-commit
[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120

[pycodestyle]
max-line-length = 120
exclude = ".tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,alembic"

