[tool.poetry]
name = "ylab Dishes menu"
version = "0.0.1"
description = ""
authors = ["Alexei Fisher <fisheriusby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
pydantic = "^2.0.3"
psycopg2-binary = "^2.9.6"
pydantic-settings = "^2.0.2"
alembic = "^1.11.1"
sqlalchemy = "1.4.49"
asyncpg = "^0.28.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
pytest-order = "^1.1.0"
flake8 = "^6.1.0"
aioredis = "^2.0.1"
pre-commit = "^3.3.3"


[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip_glob = ["*/alembic/versions/*"]

# doesn't work with pre-commit
[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120

[pycodestyle]
max-line-length = 120
exclude = ".tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,alembic"
